Lots of improvements: now a functional calculator, with a nice basic logic

--- a/PRG1_Calculator/Form1.resx
+++ b/PRG1_Calculator/Form1.resx
@@ -117,4 +117,62 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAFyAAAAEAIAAoDAAAFgAAACgAAAAXAAAAQAAAAAEAIAAAAAAAgAsAAAAAAAAAAAAAAAAAAAAA
+        AAB6eXooRkZIqTEwMsswLzHJMC8xyTAvMckwLzHJMC8xyTAvMckwLzHJMC8xyTAvMckwLzHJMC8xyTAv
+        MckwLzHJMC8xyTAvMckwLzHJMC8xyTc2OMlZWVpyz8/QBUlISpI2NTfVOTk6ezMzNXc0NDV3NDQ1dzQ0
+        NXc0NDV3NDQ1dzQ0NXc0NDV3NDQ1dzQ0NXc0NDV3NDQ1dzQ0NXc0NDV3NDQ1dzQ0NXc0NDV1Ozo8mDg4
+        OdxlZWYxMjIzqDQzNZUAAAAA8vHyAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAFBPUQBLS0whLy4w0j49Pz4yMTOoMjEzkwIAAwCcnZwJW1tcPDo5
+        O0pVVFVBkZCRDnh3eACHh4gVT05PRTw7PUpkY2Q1s7O0BAAAAAB0c3UlRENESURDREl1dHYlEhESAEVE
+        Rh8uLi/RPTw+PjIxM6gyMTOTAAAAAFVVVXE2NjfmMC8x0TQzNuVMS06MwcHCDkhISaYzMzXiMC8x0jg4
+        OuNcXF5UeHl6JT8+QM8yMTPZMjEz2T8+Qc91dHYmQkFDHS4uL9E9PD4+MjEzqDIxM5P///8BNjY3sDw8
+        PY1wcHEPPz9CbzEwNMZcW10tMjEz1khHSVRqa2wTODc5qTk5O45FRUdQMjI01FpaWypaWVsqMjE01EJB
+        Q1BGRkcbLi4v0T08Pj4yMTOoMjEzk////wEzMTWxPDo9gAAAAABAQEJgLy8xxlRUVS0xMDLUS0pLQ///
+        /wI4NzmfNzY4kDo6O1EvLjDHVVVWDVVVVg0vLjDHNzU4UkhISRsuLi/RPTw+PjIxM6gyMTOTAAAAAE5N
+        UIU2NTfkMjEzujU1Nt5HRkigpqanFUJCQ7o0NDXXMjEzvDY2OOdXV1hjOTg6US8uMMdUVFUNVFRVDS8u
+        MMc4NjpSSEdJGy4uL9E9PD4+MjEzqDIxM5MLCgwAi4qMEFJSU1g2NjdpTU1OXoCAgRlPT1AAdXV1I0VF
+        RmM2NTdpWFhZT+7v7gU3NTlTLy0xx1RTVg1UVFUNLy4wxzg2OlJIR0kbLi4v0T08Pj4yMTOoMjEzkw0M
+        DgCFhIUUT09QYjU0NnRKSUppenl7HT49PwB0c3UpRENGbjY1N3RVVVdZyMnKCDY1OFMvLTDHVVRWDVRU
+        VQ0vLjDHODc5UkhHSRsuLi/RPTw+PjIxM6gyMTOTAAAAAE1MTok1NDbiMjEzszQ0NdtFRUeloaCiF0JA
+        Rb41MzbSMjIztTY1N+ZUVFZnNzc5US4uMMdVVFYNVFRVDS8uMMc4NzlSSEdJGy4uL9E9PD4+MjEzqDIx
+        M5P///8BMTAzsTs6PH0AAAAAQUBCXTAvMsZSUVMtLy4x1EpITEAAAAAANzY4nDQ0NpA5ODtRLy4wx1ZW
+        Vw1VVVYNLy4xxzc2OVJISEkbLi0v0Tw7PT4yMTOoMjEzk////wE2NTiwPDo+kWJgZBZAQEF0MjI0xl9f
+        YCwxMTPWRkZIWWFgYRo3NzitOTg6jkhHSU8zMjXVV1ZZMFdWWDAzMjXVRENGUEZGRxsuLS/ROzs9PjIx
+        M6gyMTOTAAAAAFdWWGs3NjnjLy4x1DY1N+RPTlCFysvKDElJS58zMzTiMC8w1To5Ot9eXV9PfHx9IkA/
+        QckyMDPbMjAz20A/Qcl4eHkjQkFDHS4tL9E7Oz0+MjEzqDIxM5MAAAAAuLe4BmdnaDNBQEJBYGBhOKal
+        pgqPjo8AmJiYEFdXWDxCQUNBcG9xLNzb2wMYGBoAgYGCHklISkBJSEpAgYGCHjQ0NgBFREYfLi0v0Ts7
+        PT4yMTOoMjEzkw8OEABzc3MnRERFkTEwMqNAP0GZamlqNgAAAABiYWNHOzo8njExMqNJSUuGfH1+GbGy
+        sgZVVFZqNTQ2ojU0NqJWVVdqxsTFBkRDRR8uLS/ROzs9PjIxM6gyMTOTAAAAAEVFRpw2NTfQNjY4hjY2
+        OMI/PkC2iIaIHzo5PM03NzizNzc4iTU1N9xJSkt6YGBhPzY2OOQ4NzqYODc6mDc3OORcXF0/Q0NEHC4t
+        L9E7Oz0+MjEzqDIxM5P///8BMC8ysTg3OXYkIyUAPDw9Vi4uL8VLSksuLS0u00NDRDkGBQcANTQ2lzMz
+        NJA6Oj1RMC8yyWJhYw9iYmMPMC8xyTg3OVFIR0kbLi0v0Ts7PT4yMTOoMjEzk////wA6OTysOTg7qEdG
+        Rzo9PD6QNjU3xG5tbik1NTbWQkFDeElIST44Nzm/QEBBilBPUks0MzbdRkVHUkZGR1IzMzXdTEtNTEVF
+        RhsuLS/ROzs9PjIxM6gyMTOTAAAAAGBfYVA6OjzQLy4w1Tc3OdZXV1hn////BVFRU381NDbYMC8x1T8+
+        P8hpaWo4jY2OFUZGSKowMDHYMTAy2EZGR6qKiosWQkJDHi4tL9E7Oz0+MjEzqDIxM5MAAAAA39/fAnh3
+        eRZIR0kebW1uGMHBwgSsrK0AsbGyBmNiZBpJSUodgYGCE////wFiYmMAmZiZDFNTVR1VVFYdmJeYDEtL
+        TABFREYfLi0v0Ts7PT4yMTOoMjEzkwAAAAD+/v4B+/v7Af///wHd3d4Bs7OyA7KysQO0tLQC6enqAf//
+        /wHKysgCtLSzA7GxsgO3t7cC+/v7Af7+/gH9/PwBOTk6AEVERh8uLS/ROzs9PjIxM6gyMTOS3d3dB1NS
+        VHU1NTaxMTEyrzExMq8xMDKvMTAyrzEwMq8xMDKvMTAyrzExMq8xMTKvMTAyrzEwMq8xMDKvMTAysD8+
+        QKdpaGo8SEhJHi4tL9E7Oz0+MjEzqDEwMo9dXF5COjk75ERERY4/Pj95Pj4/ej09P3o9PT96PT0/ej09
+        P3o9PT96PT0/ej09Pno9PT56PT0/ej09P3o/P0F5Pz9BukA/QblaWlspLS0v0Ds7PT4yMTOoMjEzjzs6
+        PFE2NTfIfHt8D4GAgQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADw7
+        PABJSEpWMTAyxUpKSy4tLS/QOzs9PjIxM6gyMTOPODg6UTU0Nsd3dncOe3p7AAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPDs9AEVFR1QwLzHFSUhKLi0tL9A7Oz0+MjEzqDIx
+        M49JSUpOODc52WNiY0BVVFYpVVVWKlNTUypTU1MqVVRWKlVUVipVVFYqVVRWKlVUVipVVFYqVVRWKlVU
+        VipbWlwnS0pMgTY2OMVTU1QtLS0v0Ds7PT4yMTOoMTAykYqKixxFREa8NjU33TMyNNYzMjPWMjIz1jIy
+        M9YxMTPWMTEz1jExM9YxMTPWMTEz1jExM9YxMTPWMTEz1jExM9Y4ODngVFRVdlRUVSEuLS/ROzs9PjIx
+        M6gyMTOTAAAAAIaFhhVMS0wtPj0/LUA/QC1AP0EtQD9BLT49Py09PT8tPT0/LT09Py09PT8tPT0/LT09
+        Py09PT8tPT0/LV5eXyfLy8oFRENFHy4tL9E7Oz0+MzI0qDY0N5gAAAAA3d3dAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFJRUgBRUVIkLy4w0z4+
+        QD5OTlCGNjU43zQ0NpwxMTKYMDAymDAwMpgxMDKYMjEzmDIxM5gyMTOYMjEzmDIxM5gyMTOYMjEzmDIx
+        M5gyMTOYMjEzmDIxM5gyMTOYMjEzlzY1N7Q5ODrXbGtsK4aGhxpNTE6GMjIzqDExMqcyMTOnMjEzpzIx
+        M6cyMTOnMjEzpzIxM6cyMTOnMjEzpzIxM6cyMTOnMjEzpzIxM6cyMTOnMjEzpzIxM6cyMTOnOTk7pl9f
+        YFX///8CAAAAAAAAAAA///AAIIIQACAAAAAAAAAABAAAACAAAAAggAAAIIAAACAAAAAEEAAAAAAAACAA
+        AAAgghAAIIAAACAAAAAEEAAAIAAAACAAAAAgghAAIAAQAAAAAAAAAAAAB//AAAf/wAAAAAAAAAAAACAA
+        AAA///AAAAAAAAAAAAA=
+</value>
+  </data>
 </root>
